--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ python-multipart==0.0.6
 aiofiles==23.2.0
 python-decouple==3.8
 pydantic==2.5.2
+pydantic-settings==2.1.0
 scipy==1.11.4
 scikit-learn==1.3.2
 openpyxl==3.1.2
