--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://chris:Robert@2006@redis-18998.c80.us-east-1-2.ec2.redns.redis-cloud.com:18998
 FILE_UPLOAD_MAX_SIZE=100000000  # 100MB
 ALLOWED_FILE_EXTENSIONS=csv,json,xlsx,txt
 TEMP_FILE_EXPIRY=3600  # 1 hour
