--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,9 @@ wheels/
 *.db
 
 # Environment variables
-.env
-.env.local
-.env.*.local
+# .env
+# .env.local
+# .env.*.local
 
 # IDE / editor settings
 .vscode/
