--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REDIS_URL=redis://localhost:6379
-# REDIS_URL=redis://host.docker.internal:6379
+# REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://host.docker.internal:6379
 FILE_UPLOAD_MAX_SIZE=100000000  # 100MB
 ALLOWED_FILE_EXTENSIONS=csv,json,xlsx,txt
 TEMP_FILE_EXPIRY=3600  # 1 hour
